# LIVI

./: README.md  electron-builder.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.web.json  vitest.config.ts
.github/actions/badges/: action.yml
.github/workflows/: build.yml  typecheck.yml
assets/displays/: VOLVO_RTI_SHARP_400_234.edid
assets/gstreamer/linux-arm64/: packages.txt
assets/gstreamer/linux-arm64/lib/: libatomic.so.1.2.0  libblkid.so.1.1.0  libexpat.so.1.12.2  libgio-2.0.so.0  (+34 more)
assets/gstreamer/linux-x64/: packages.txt
assets/linux/: dev.f-io.livi.metainfo.xml
native/gst-video/: binding.gyp
native/gst-video/src/: gst_video.cc  gst_video_mac.mm
native/livi-compositor/: .gitignore  livi-compositor.c  meson.build
native/livi-compositor/subprojects/: wlroots.wrap
native/livi-compositor/subprojects/packagefiles/: wlroots-livi-touch.patch  wlroots-livi.patch
scripts/compositor/: build-linux.sh
scripts/gstreamer/: package-linux.sh  package-macos.sh  package-windows.ps1
scripts/install/pi/: install.sh
scripts/install/pi-lite/: install.sh
scripts/install/pi-splash/: install.sh
src/main/: index.ts  utils.ts
src/main/__tests__/: utils.test.ts
src/main/app/: compositorBootstrap.ts  gpu.ts  lifecycle.ts
src/main/ipc/: app.ts  audio.ts  utils.ts
src/main/window/: createWindow.ts  secondaryWindows.ts  utils.ts
src/preload/: index.ts
src/preload/__tests__/: index.test.ts
src/renderer/: index.html
src/renderer/src/: App.tsx  constants.ts  env.d.ts  theme.ts  themeColors.ts
src/types/: global.d.ts
(+166 files in other folders)
